unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/FFX_Time_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>FFX_Time_Period_Type__c</fullName>
    <formula>TEXT(pse__Time_Period__r.pse__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Period Type</label>
    <type>Text</type>
</CustomField>