unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related assignment - applies only if Resource is also set</description>
    <inlineHelpText>Related assignment - applies only if Resource is also set</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Backlog Details</relationshipLabel>
    <relationshipName>Backlog_Details</relationshipName>
    <type>Lookup</type>
</CustomField>