unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Backlog Details</relationshipLabel>
    <relationshipName>Backlog_Details</relationshipName>
    <type>Lookup</type>
</CustomField>