unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Backlog Details</relationshipLabel>
    <relationshipName>Backlog_Details</relationshipName>
    <type>Lookup</type>
</CustomField>