unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Backlog Details</relationshipLabel>
    <relationshipName>Backlog_Details</relationshipName>
    <type>Lookup</type>
</CustomField>