unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of days scheduled based on assignment schedules and schedule exceptions. For example, if an assignment has a schedule of 4 hours M-W and the calculation period is an inclusive period of 2 weeks, the value would be 6 days (3 days/week * 2)</description>
    <inlineHelpText>Total number of days scheduled based on assignment schedules and schedule exceptions. For example, if an assignment has a schedule of 4 hours M-W and the calculation period is an inclusive period of 2 weeks, the value would be 6 days (3 days/week * 2)</inlineHelpText>
    <label>Scheduled Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>