unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Billable revenue from scheduled assignments. For hourly assignments, this is the number of scheduled hours * bill rate. For assignments with a daily bill rate, this is the number of scheduled days * bill rate.</description>
    <inlineHelpText>Billable revenue from scheduled assignments. For hourly assignments, this is the number of scheduled hours * bill rate. For assignments with a daily bill rate, this is the number of scheduled days * bill rate.</inlineHelpText>
    <label>Time Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>