unpackaged/main/default/objects/pse__Backlog_Detail__c/fields/pse__Unheld_Resource_Request_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Unheld_Resource_Request_Hours__c</fullName>
    <label>Unheld Resource Request Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>